# embedded_systems

./: README.md
CONSEGNA_1/Consegna-01/: componenti_gruppo.txt  follow_the_light.fzz
CONSEGNA_1/Consegna-01/follow_the_light/: follow_the_light.ino
CONSEGNA_1/Testo.rtfd/: TXT.rtf
CONSEGNA_2/Consegna-02/arduino/: CMakeLists.txt
CONSEGNA_2/Consegna-02/arduino/smart_garage/: GarageDoorTask.cpp  GarageDoorTask.h  ParkingAssistanceTask.cpp  ParkingAssistanceTask.h  Timer.h  smart_garage.ino
CONSEGNA_2/Consegna-02/doc/: schemaConsegna2.fzz
CONSEGNA_2/Consegna-02/java/: .classpath  .project  _classpath.xml  _project.xml  build.fxbuild.xml
CONSEGNA_2/Consegna-02/java/src/application/: Gui.java  ParkingAssistance.java
CONSEGNA_2/Consegna-02/java/src/main/: Main.java
CONSEGNA_2/Consegna-02/java/src/serial_monitor/: CommChannel.java  SerialCommChannel.java
CONSEGNA_2/Testo.rtfd/: TXT.rtf
CONSEGNA_3/Consegna-03/arduino/: CMakeLists.txt
CONSEGNA_3/Consegna-03/arduino/smart_radar/: AngleIterator.cpp  AngleIterator.h  CommandReaderTask.cpp  Radar.cpp  Radar.h  SharedContext.cpp  SharedContext.h  config.h
CONSEGNA_3/Consegna-03/doc/: Schema_Consegna03.fzz
CONSEGNA_3/Consegna-03/java/: .classpath  .project
CONSEGNA_3/Consegna-03/java/src/radar/raspi/emu/: Led.java  ObservableButton.java  SerialImpl.java
CONSEGNA_3/Consegna-03/java/src/radar/raspi/main/: Main.java  RadarController.java
CONSEGNA_3/Consegna-03/java/src/radar/raspi/pi4j_impl/: Button.java  Led.java
CONSEGNA_3/Consegna-03/java/src/radar/raspi/serial/: SerialCommChannel.java
CONSEGNA_3/Consegna-03/java/src/radar/raspi/serial_test/: TestMsg.java  TestSerial.java
CONSEGNA_3/Testo.rtfd/: TXT.rtf
CONSEGNA_4/Consegna-04/doc/: consegna04.fzz
CONSEGNA_4/Consegna-04/src/: smart_door_ddl.sql
CONSEGNA_4/Consegna-04/src/android/app/: build.gradle
CONSEGNA_4/Consegna-04/src/android/app/src/main/java/com/smart_door/consegna04/smartdoor/: MainActivity.java
CONSEGNA_4/Consegna-04/src/android/gradle/wrapper/: gradle-wrapper.properties
CONSEGNA_4/Consegna-04/src/arduino/smart_door/: CMakeLists.txt
CONSEGNA_4/Consegna-04/src/raspi/src/: .smartdoorrc  server.js
CONSEGNA_4/Consegna-04/src/raspi/src/public/: index.html
CONSEGNA_4/Testo.rtfd/: TXT.rtf
